--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -5,21 +5,21 @@
                 <a class="uk-navbar-item uk-logo" href="/">
                     <span class="uk-icon uk-margin-small-right" uk-icon="icon: icon-color-light; ratio: 0.15"></span>
                 </a>
-                <ul class="uk-navbar-nav">
+               <ul class="uk-navbar-nav">
                     <li><a [routerLink]="['/']" routerLinkActive="uk-text-bold"  >Produtos</a></li>
                     <li><a [routerLink]="['/account/pets']" routerLinkActive="uk-text-bold"  >Meus Pets</a></li>
-                    <li><a href="#">Consultas</a></li>
+                    <!--<li><a href="#">Consultas</a></li>-->
                 </ul>
             </div>
             <div class="uk-navbar-right">
                 <ul class="uk-navbar-nav">
                     <li>
-                        <a href="/cart"> 
+                        <a [routerLink] = "['/cart']"> 
                             <span class="uk-icon uk-margin-small-right" uk-icon="icon: cart"></span>
                         </a>
                     </li>
                     <li>
-                        <a href="/account">
+                        <a [routerLink]= "['/account']">
                             <span class="uk-icon uk-margin-small-right" uk-icon="icon: user"></span>
                       {{user?.name}}
                         </a>
