--- a/src/app/components/store/product-card/product-card.component.html
+++ b/src/app/components/store/product-card/product-card.component.html
@@ -1,11 +1,11 @@
 <div class="uk-card uk-card-default">
     <div class="uk-card-media-top uk-text-center">
-        <img src="{{ product.images[0] }}" alt=""  height="150" width="150" class="uk-margin-small-bottom">
+        <img src="{{product.images[0]}}" alt=""  height="150" width="150" class="uk-margin-small-bottom">
     </div>
     <div class="uk-card-body">
         <h3 class="uk-card-title"> {{ product.price/100 |  currency: 'BRL' }}</h3>
         <p style="height:50px" >{{ product.title }} </p>
-        <button class="uk-button uk-button-default">
+        <button class="uk-button uk-button-default" (click)="addToCart()" >
             <span class="uk-icon uk-margin-small-right" uk-icon="icon: cart">
             </span>
             Adicionar</button>
